Fixing minor layout issues

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -124,11 +124,12 @@ header {
 
 .barocco {
   font-family: 'Satisfy', cursive !important;
-  @include transform(rotate(1deg));
+  @include transform(rotate(5deg));
   color: $linkColorHover;
   text-shadow: 0 -1px 0 darken($linkColorHover, 15%);
   text-align: left !important;
-
+  z-index: 101;
+  position: absolute;
 }
 
 #emotional {
@@ -160,17 +161,19 @@ header {
 #mission {
   clear: both;
   color: white;
+
   padding: 0 20%;
   background-color: darken($humanaColor, 15%);
   @include box-shadow(inset 0 0 200px 10px darken($humanaColor, 30%));
 
-  p {
+  div {
     padding: 20px 0;
     line-height: 1.2em;
     width: 600px;
   }
   cite {
-    padding-top: 60px;
+    padding-top: 50px;
+    display: block;
     line-height: 1.4em;
     text-shadow: 0 1px 0 darken($humanaColor, 15%);
     font-style: italic;
@@ -202,7 +205,7 @@ header {
     width: 30%;
     min-width: 156px;
     float: left;
-    margin-top: 278px;
+    margin-top: 328px;
     padding: 0 30px;
     background: rgba(0, 0, 0, 0.3);
     color: #ddd;
@@ -214,7 +217,7 @@ header {
     width: 30%;
     min-width: 156px;
     float: right;
-    margin-top: 278px;
+    margin-top: 328px;
     padding: 0 30px;
     background: rgba(0, 0, 0, 0.3);
     color: #ddd;
